fix: rowmapper replaxed by rowextractor